# PROG2002

./: .gitignore  CMakeLists.txt  README.md  flake.nix
assignment/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessPieces.cpp  ChessPieces.h  chessboard.cpp  chessboard.h  constants.h  main.cpp
examples/example_6/: CMakeLists.txt  main.cpp
examples/example_6/src/: DrawPass.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.h  Object.h  Renderer.cpp  Renderer.h  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  geometry.cpp  geometry.h  main.cpp  shader.cpp  shader.h  window.cpp  window.h
examples/example_6/src/lib/: window.cpp
framework/: CMakeLists.txt  test.h
framework/include/framework/: Camera.h  Object.h  Shader.h  Texture.h  VertexArray.h  VertexArrayObject.h  geometry.h  window.h
framework/src/: Camera.cpp  Shader.cpp  Texture.cpp  geometry.cpp  window.cpp
labs/lab1/: CMakeLists.txt  main.cpp
labs/lab1/src/: geometry.cpp  geometry.h  main.cpp
labs/lab_1/: CMakeLists.txt  main.cpp
labs/lab_2/: CMakeLists.txt  main.cpp
labs/lab_3/: CMakeLists.txt  main.cpp
labs/lab_4/: CMakeLists.txt  chessboard.cpp  chessboard.h  cube.cpp  cube.h  main.cpp
labs/lab_5/: CMakeLists.txt  README.md  chessboard.cpp  chessboard.h  cube.cpp  cube.h  main.cpp
labs/project/: CMakeLists.txt
labs/project/src/: types.h
labs/project/src/lib/: Object.h  Shader.cpp  Shader.h
